Enhance option selling strategy with premium-based exits, VIX targets, dynamic position sizing, and automated 9:50 AM entry